--- a/web/views/layouts/admin.jade
+++ b/web/views/layouts/admin.jade
@@ -26,6 +26,7 @@ html(class='no-js')
 
     //- Custom Directives
     link(rel='stylesheet', href='/stylesheets/directives/tagSelector.css')
+    link(rel='stylesheet', href='/stylesheets/directives/graphMetrics.css')
 
     link(rel='stylesheet', href='/stylesheets/main.css')
     link(rel='stylesheet', href='/components/nvd3/build/nv.d3.css')
@@ -92,6 +93,7 @@ html(class='no-js')
 
     //- Custom Directives
     script(src="/javascripts/directives/tagSelector.js")
+    script(src="/javascripts/directives/graphMetrics.js")
 
 
 
