correct interconnectness calc

--- a/web/views/partials/directives/graphMetrics.jade
+++ b/web/views/partials/directives/graphMetrics.jade
@@ -1,4 +1,4 @@
 div.graph-metrics(layout="row")
-	div {{user_count}} users
+	div {{user_count}} participants
 	div(flex)
 	div Interconnectedness: {{interconnectedness_percentage}}%
