frontend and boolean tag selector

--- a/web/views/admin/compare.jade
+++ b/web/views/admin/compare.jade
@@ -45,6 +45,7 @@ block content
 					tag-selector( 
 						available-tags="tags.all",
 						selected-tags="graphs[0].selectedTags"
+						boolean-operator="graphs[0].booleanOperator"
 					)
 
 			md-content(flex, layout-padding)
@@ -80,4 +81,5 @@ block content
 					tag-selector( 
 						available-tags="tags.all",
 						selected-tags="graphs[1].selectedTags"
+						boolean-operator="graphs[1].booleanOperator"
 					)
