--- a/web/views/admin/graph.jade
+++ b/web/views/admin/graph.jade
@@ -45,4 +45,5 @@ block content
 					tag-selector( 
 						available-tags="tags.all",
 						selected-tags="graph.selectedTags"
+						boolean-operator="graph.booleanOperator"
 					)
