--- a/web/views/layouts/admin.jade
+++ b/web/views/layouts/admin.jade
@@ -77,6 +77,7 @@ html(class='no-js')
     script(src="/javascripts/services/TagService.js")
     script(src="/javascripts/services/ScrapeService.js")
     script(src="/javascripts/services/UserService.js")
+    script(src="/javascripts/services/GraphFiltererService.js")
     script(src="/javascripts/services/D3GraphOptionsService.js")
 
     //- controllers
